# FITSeye

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  fitseye.py  requirements.txt
.cache/clangd/index/: base.cpp.4F0D555F61E9991B.idx
example/: fits.cpp
fitseye/: base.cpp  base.hpp  fits.cpp  fits.hpp  global.hpp
sample/: sample_urls.txt
scripts/: __init__.py  common.py  definitions.py  file.py  histogram.py  main.py  select.py  table.py
src/: base.cpp  base.hpp
test/: fits.cpp
